--- a/skin/frontend/oc-theme/default/css/styles.css
+++ b/skin/frontend/oc-theme/default/css/styles.css
@@ -44,8 +44,8 @@ dl  {
 p.note-msg{margin-top: 15px;}
 .data-table{width: 100%;}
 #my-orders-table td,#my-orders-table th{width: 15%;border: 1px solid #eff1f5;}
-/* ==========================================================================   Base   ========================================================================== *//* * 1. Sets default font family to "Assistant",   sans-serif. * 2. Prevents iOS text size adjust after orientation change,   without disabling *    user zoom. */html   {
-          font-family:   "Assistant",   sans-serif;
+/* ==========================================================================   Base   ========================================================================== *//* * 1. Sets default font family to "Heebo",   sans-serif. * 2. Prevents iOS text size adjust after orientation change,   without disabling *    user zoom. */html   {
+          font-family:   "Heebo",   sans-serif;
           /* 1 */  -webkit-text-size-adjust:   100%;
           /* 2 */  -ms-text-size-adjust:   100%;
           /* 2 */}
@@ -272,7 +272,7 @@ html   {
           /* Prevent automatic scaling on iOS */}
 body   {
           background:   #FFFFFF;
-          color:   #1f1f1f1f1f1f;
+          color:   #1f1f1f;
           line-height:   1;
       }
 html,  body,  img,  fieldset,  abbr,  acronym   {
@@ -327,7 +327,7 @@ a,   button   {
           touch-action:   manipulation;
     }
 body,  button,  input,  select,  table,  textarea   {
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           color:   #292929;
           font-size:   14px;
           line-height:   1.5;
@@ -360,7 +360,7 @@ button.couponButton img  {
           margin:   0;
           margin-bottom:   0.7em;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   28px;
           font-weight:   400;
           font-style:   normal;
@@ -372,7 +372,7 @@ h2,   .h2   {
           margin:   0;
           margin-bottom:   0.5em;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   18px;
           font-weight:   400;
           font-style:   normal;
@@ -382,7 +382,7 @@ h3,   .h3   {
           margin:   0;
           margin-bottom:   0;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   18px;
           font-weight:   400;
           font-style:   normal;
@@ -392,7 +392,7 @@ h4,   .h4   {
           margin:   0;
           margin-bottom:   10px;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   14px;
           font-weight:   bold;
           font-style:   normal;
@@ -402,7 +402,7 @@ h5,   .h5   {
           margin:   0;
           margin-bottom:   10px;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   13px;
           font-weight:   bold;
           font-style:   normal;
@@ -412,7 +412,7 @@ h6,   .h6   {
           margin:   0;
           margin-bottom:   5px;
           color:   #3c3c3b;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   12px;
           font-weight:   bold;
           font-style:   normal;
@@ -508,8 +508,12 @@ label.required:after,   span.required:after   {
 .page_cms_index_noRoute{    margin-top: 30px;}
 .gallery-section ul li{width: 24.3%;margin-bottom: 10px;}
 .gallery-section ul li img{}
-.account-link{text-align: right;font-size: 15px;font-weight: 400;color: #fff;}
-.account-link a{text-decoration: underline;    color: #fff;font-size: 15px;}
+.right-top{text-align: right;font-size: 16px;font-weight: 400;}
+.right-top span{margin-left: 30px;}
+.header-ab .right-top{color: #fff;}
+.account-link{display: inline-block;vertical-align: top;font-size: 18px;margin-top: 3px;margin-right: 25px;}
+.account-link a{font-size: 18px;    text-decoration: underline;}
+.header-ab .account-link,.header-ab .account-link a{color: #fff;}
 .side_menu{margin-top: 30px;}
 .side_menu li a{color:#383838;font-size:17px;}
 .side_menu li{    cursor: pointer;padding: 10px 30px 10px 15px;position: relative;}
@@ -2107,12 +2111,11 @@ body.customer-account .my-account .page-title h1   {
 .header-right .header-links ul li a{font-size: 16px;}
 .page-header-top{background: #292929;padding-bottom: 10px;}
 .page-header  {margin:0;padding:   0;border:   none;position: relative;}
-.header-top{background: #121212;color: #fff;text-align:right;    padding: 10px;}
-.header-top div{display:inline-block;position:relative;margin: 3px 20px;}
-.header-top div.first:after{content:"";display:block;position:absolute;background:#fff;width:1px;    height: 12px;top: 7px;left: -23px;}
-.header-top div p{    font-size: 18px;margin: 0;color: #fff;}
-.header-top div a{color: #fff;}
-.header-top div.cosher{float: left;background: #8f4b49;border: 1px solid #fff;width: 88px;height: auto;}
+.header-top{    background: #272727;color: #fff;text-align: center;padding: 11px 0;}
+.header-top ul li{display: inline-block;margin-left: 40px;}
+.header-top ul li img{display: inline-block;vertical-align: top;} 
+.header-ab{    position: absolute;left: 0;right: 0;background: transparent;}
+.header-ab .page-header-top{    background: transparent;}
 .header-right {    margin-top: 15px;
     margin-bottom: 15px;
     float: left;    text-align: left;
@@ -2218,8 +2221,8 @@ a.skip-link   {
 }
 /* -------------------------------------------- * * Skip Link - Icon */.skip-link .icon   {
           display:   inline-block;
-          width:   30px;
-          height:   30px;
+          width:   41px;
+          height:   36px;
           vertical-align:   middle;
     }
 .skip-link.skip-nav .icon,  .skip-link.skip-cart:  not(.no-count) .icon   {
@@ -2249,7 +2252,8 @@ a.skip-link   {
 .home-top li img{margin: 0 auto 15px;}
 .home-top li p{color: #111111;font-size: 17px;line-height: 20px;}
 .home-top li strong{font-size: 20px;}
-.home-cats{float:right;width:100%;padding: 80px 0 180px;}
+.home-cats{float:right;width:100%;padding:0;}
+.home-cats h3{}
 .home-cats .banner img{width: 100%;}
 .home-cats .block{position:relative;}
 .home-cats .block .text{    text-align: center;position: absolute;background: #fff;left: 0;right: 0;width: 80%;margin: 0 auto;bottom: -105px;padding: 20px 0;}
@@ -2286,7 +2290,7 @@ a.skip-link   {
 .how-works .text{padding-right: 40px;    margin: 10px 0;}
 .how-works .text h3{font-size: 17px;font-weight: 800;}
 .how-works .text .subTitle{font-size: 16px;line-height: 21px;}
-.blog-home .title h3{color: #292929;font-size: 35px;font-weight: 800;}
+.blog-home .title h3{color: #fff;font-size: 30px;font-weight: 800;}
 .account-login .col2-set .new-users a{margin-top: 13px;}
 .home-abouts{background: url(../images/about-bg.jpg) 0 0 no-repeat;height: 600px;margin-top: 110px;}
 .home-about-content{margin-top: -60px;}
@@ -2314,21 +2318,25 @@ a.skip-link   {
 .home-section .tab_container .tab_content_category{display:none;}
 .home-section .tab_container .tab_content_category.active{display:block;}
 .home-section .tabs-category li{cursor: pointer;font-size:17px;color:#383838;border-bottom:1px solid #d9d9d9;line-height: 46px;padding-right: 15px;position:relative;}
-.home-section .tabs-category li:hover{color: #f7407b;}
-.home-section .tabs-category li.active{color: #fff;background:#5cb85c;}
+.home-section .tabs-category li:hover{background: #fff;    border-color: transparent;}
+.home-section .tabs-category li.active{background: #fff;    border-color: transparent;}
 .home-section .tabs-category li.active:after{content:"";display:block;background:url("../images/home-cat-active.png") 0 0 no-repeat;width: 24px;height: 46px;position: absolute;left: -15px;top: 0px;}
 .home-section .box-title-category{width: 20%;}
 .home-section .tab_container{width: 80%;padding-right: 50px;}
 .home-section .tab_container .item .name{color:#383838;font-size:19px;    margin-top: 5px;}
 .home-section .gallery-section{margin-top: 20px;display: inline-block;width: 100%;}
 .home-section .gallery-section .title{margin-bottom: 10px;}
-.blog-home{margin-top:60px;float: right;width: 100%;}
-.blog-home .tabs-contant{border: 1px solid #dfdfdf;padding: 40px 40px 20px;}
+.blog-home{margin-top:40px;float: right;width: 100%;}
+.blog-home .tabs-contant{padding-top: 50px;}
+.blog-home .product-grid .price-box .special-price label,.blog-home .product-grid .price-box .price ,.blog-home .product-grid .price-box .special-price .price{    font-size: 16px;font-weight: 300;color: #fff;}
+.blog-home  .product-grid .product-name a{font-size: 17px;font-weight: 400;color: #fff;}
 .blog-home .tabs-headers{text-align: center;}
-.blog-home .tabs-headers li{display: inline-block;margin: 0;cursor: pointer;border: 1px solid transparent;padding: 10px 45px;position: relative;top: 0;border-bottom: none;background: #fff;}
-.blog-home .tabs-headers li.active{border-color: #dfdfdf;top: 1px;}
+.blog-home .tabs-headers li{    display: inline-block;margin: 0;cursor: pointer;border: 1px solid #fff;padding: 5px 0;position: relative;top: 0;background: transparent;width: 130px;}
+.blog-home .tabs-headers li.active,.blog-home .tabs-headers li:hover{border-color:transparent;top: 0;background: #fff;}
 .blog-home .tabs-headers li img{margin: 0 auto;}
-.blog-home .tabs-headers li span{color: #292929;font-size: 18px;display: block;margin-top: 10px;}
+.blog-home .tabs-headers li span{color: #fff;font-size: 18px;display: block;margin-top: 0;font-weight: 300;}
+.blog-home .tabs-headers li.active span,.blog-home .tabs-headers li:hover span{    color: #272727;}
+.blog-home .tabs-headers li.active:after{    content: "";background: url(../images/tabs-on.png) 0 0 no-repeat;width: 18px;height: 8px;position: absolute;left: 0;right: 0;text-align: center;margin: 0 auto;bottom: -9px;}
 .blog-home .title{text-align: center;    margin-bottom: 20px;}
 .blog-home .title img{margin: 0 auto;}
 .blog-home .title .subtitle{    font-size: 24px;color: #292929;margin-top: 15px;}
@@ -2458,8 +2466,8 @@ a.skip-link   {
 @media only screen and (min-width:   768px)   {
 #header-nav   {
 	display:   block;padding-top: 0;
-	background: #f2efef;
-    margin-top: 0;
+	background:transparent;
+    margin-top: 20px;
 }
 	.header-nav nav{float: none;}
 }
@@ -2483,7 +2491,6 @@ margin-top: 10px;
 	line-height:   30px;
 	font-size:   17px;
 }
-.nav-primary li.level0.last a.level0   {color: #b03c39;}
 .nav-primary li   {
           position:   relative;
     }
@@ -2537,8 +2544,10 @@ margin-top: 10px;
 }
 .nav-primary li.level0,    .nav-primary a.level0   {
 	display:   inline-block;color: #292929;
-    font-size: 18px;
+    font-size: 20px;
 }
+.header-ab .header-nav nav{border-top: 1px solid #fff;border-bottom: 1px solid #fff;}
+.header-ab .nav-primary li.level0,.header-ab .nav-primary a.level0{    color: #fff;}
 .nav-primary a.level0 span.thumb-nav{display:inline-block;vertical-align: middle;margin-top: -4px;margin-left: 5px;}
 .nav-primary li.level0{padding-bottom: 7px;padding-top: 7px;}
 .nav-primary .menu-active   {
@@ -2648,11 +2657,13 @@ margin-top: 10px;
             position:   relative;
       }
 }
-.nav-primary li.level0:hover,.nav-primary li.level0.active{background: #8f4b49;}
-.nav-primary li.level0:hover a.level0,.nav-primary li.level0.active  a.level0{    color: #fff;}
+.nav-primary li.level0:hover,.nav-primary li.level0.active{background: #961f23;}
+.nav-primary li.level0:hover a.level0,.nav-primary li.level0.active  a.level0{color: #fff;}
 .nav-primary li.menu-active > ul   {
           display:   block!important;
     }
+.ma-banner7-container .container{position: static;}
+.ma-banner7-container .container .banner-icon{position: absolute;top: 300px;}
 /* ============================================ * * Search - Skip Link * ============================================ */.skip-search:  not(.skip-active):hover .icon   {
           background-position:   -46px -146px;
     }
@@ -2774,16 +2785,20 @@ width: 35px;
         font-weight:   300;
             font-size:   16px;
     }
-/* ============================================ * * Header - Cart * ============================================ *//* -------------------------------------------- * * Skip Link - Cart */.skip-cart .icon   {
-        	background-image:   url("../images/cart.png");
-          	background-position:  0 0;
-        	background-repeat:   no-repeat;
-    }
-          .skip-cart   {
-            width:   auto;
-            padding:   0;height: auto;display: block;
-    position: relative;
-      }
+/* ============================================ * * Header - Cart * ============================================ *//* -------------------------------------------- * * Skip Link - Cart */
+	.skip-cart .icon   {
+		background-image:   url("../images/cart.png");
+		background-position:  0 0;
+		background-repeat:   no-repeat;
+	}
+	.header-ab .skip-cart .icon{
+		background-image:   url("../images/cart-white.png");
+	}
+	.skip-cart   {
+		width:   auto;
+		padding:   0;height: auto;display: block;
+		position: relative;
+	}
   #header-cart.skip-active   {
     display: block;
     position: fixed;
@@ -2845,7 +2860,7 @@ top: 45%;
 	position:   relative;
 	margin-top: 20px;
 }
-.header-minicart .label{     font-size: 16px;
+.header-minicart .label{     font-size: 18px;
     font-weight: 400;
     margin-left: 0;
     color: #fff;}
@@ -2886,7 +2901,7 @@ margin: 0;
           display:   none;
     }
 .header-minicart .block-subtitle   {
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           line-height:   1.4;
           padding:   5px;
           text-align:   center;
@@ -2910,16 +2925,22 @@ margin: 0;
         text-decoration:   underline;
 }
 .form-language  {
-        float:   left;
+    float: none;
+    display: block;
+    margin-bottom: 28px;
 }
+.form-language a{text-transform: uppercase;
+    font-size: 17px;}
+.header-ab .form-language a{color: #fff;}
 .page-header-container div.float{float:right;}
 .page-header-container div.logo-block{margin-left: 70px;padding-right: 0;}
 .page-header-container div.top-links{margin-top: 27px;}
 .page-header-container div.top-links li{display: inline-block;position: relative;margin: 0 11px;}
 .page-header-container div.top-links li:after{content: "";display: block;position: absolute;background: #f7407b;width: 1px;height: 12px;top: 7px;left: -13px;}
 .page-header-container div.top-links li:last-child:after{display:none;}
-.page-header-container div.phone-top{display: inline-block;vertical-align: top;}
-.page-header-container div.phone-top a{font-size: 15px;font-weight: 600;margin-right: 10px;color: #fff;}
+.page-header-container div.phone-top{display: inline-block;vertical-align: top;font-size: 17px;}
+.page-header-container div.phone-top a{font-size: 20px;font-weight: 500;margin-right: 10px;color: #fff;background: url(../images/phone.png) 0 0 no-repeat;padding-left: 35px;}
+.header-ab .page-header-container div.phone-top a{background: url(../images/phone-white.png) 0 0 no-repeat;}
 .header-slogan{margin-top: 20px;}
 .header-slogan p{color: #8f4b49;font-size: 18px;font-weight: 700;}
 .page-header-container div.top-links li a{font-size: 17px;color: #f7407b;}
@@ -3333,7 +3354,7 @@ font-weight: 300;
     }
 /* Subtotal */.cart-menu .subtotal   {
           padding:   0 15px 15px;
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
           font-size:   24px;
           line-height:   1.2;
     }
@@ -3366,7 +3387,7 @@ font-weight: 300;
           font-size:   12px;
     }
 /* ============================================ * * Footer * ============================================ *//* -------------------------------------------- * * Footer */.footer,  .footer button   {
-          font-family:   "Assistant",   sans-serif;
+          font-family:   "Heebo",   sans-serif;
     }
 .footer-container  {float: right;width: 100%;margin-top: 50px;padding: 20px 0;}
 .catalog-product-view .footer-container{    margin-top: 0;}
