--- a/skin/frontend/oc-theme/default/css/styles.css
+++ b/skin/frontend/oc-theme/default/css/styles.css
@@ -1,18 +1,4 @@
 /*Special font*/
-@font-face {
-	font-family: 'fb_liddarbold';
-	src: url('../fonts/fbliddar/FBLIDDAR-BOLD.eot');
-	src: local('☺'), url('../fonts/fbliddar/FBLIDDAR-BOLD.woff') format('woff'), url('../fonts/fbliddar/FBLIDDAR-BOLD.ttf') format('truetype'), url('../fonts/fbliddar/FBLIDDAR-BOLD.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-@font-face {
-	font-family: 'fb_liddarreg';
-	src: url('../fonts/fbliddar/FBLIDDAR-REGULAR.eot');
-	src: local('☺'), url('../fonts/fbliddar/FBLIDDAR-BOLD.woff') format('woff'), url('../fonts/fbliddar/FBLIDDAR-REGULAR.ttf') format('truetype'), url('../fonts/fbliddar/FBLIDDAR-REGULAR.svg') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
 article,  aside,  details,  figcaption,  figure,  footer,  header,  hgroup,  nav,  section,  summary   {
           display:   block;
     }
@@ -347,7 +333,7 @@ ol,  ul   {
           padding:   0;
     }
 button  {
-            background:   #8f4b49;
+            background:   #961f23;
         border:   none;
         color:   #fff;
 }
@@ -664,11 +650,12 @@ label.required:after,   span.required:after   {
 }
 .newsletter-container .input-box input   {
     border-color: transparent;
-    width: 278px;
+    width: 365px;
     height: 40px;
     padding: 0 10px;
     font-size: 18px;
     font-weight: 300;
+	max-width: 100%;
 }
 .newsletter-container .actions button{height: 42px;
     width: 120px;font-size: 18px;
@@ -1897,8 +1884,7 @@ font-size: 17px;padding-bottom: 10px;
     display: block;
     position: relative;
     font-weight: 700;
-    text-align: center;font-size: 40px;
-    font-family: 'fb_liddarbold';}
+    text-align: center;font-size: 40px;}
 .col2-set {
     width: 100%;
     display: inline-block;position: relative;
@@ -2258,7 +2244,7 @@ a.skip-link   {
 .home-cats .block{position:relative;}
 .home-cats .block .text{    text-align: center;position: absolute;background: #fff;left: 0;right: 0;width: 80%;margin: 0 auto;bottom: -105px;padding: 20px 0;}
 .home-cats .block .text img{margin: 0 auto;}
-.home-cats .block .text h3{font-size: 40px;font-family: 'fb_liddarbold';}
+.home-cats .block .text h3{font-size: 40px;}
 .home-cats .block .text .subTitle{font-size: 18px;font-weight: 300;}
 .home-cats .block .text .link{border: 1px solid #bebebe;height: 45px;width: 65%;margin: 15px auto;}
 .home-cats .block .text .link a{    display: block;line-height: 45px;font-size: 16px;font-weight: 300;}
@@ -2282,7 +2268,6 @@ a.skip-link   {
 .how-works .title{text-align: center;    margin-bottom: 45px;}
 .how-works .title h3{color: #292929;font-size: 35px;font-weight: 800;}
 .how-works .title img{margin: 0 auto;}
-.how-works .banner img{width: 100%;}
 .how-works .item.first .text{background: url(../images/one.png) right 0 no-repeat;}
 .how-works .item.second .text{background: url(../images/two.png) right 0 no-repeat;}
 .how-works .item.third .text{background: url(../images/three.png) right 0 no-repeat;}
@@ -2331,7 +2316,7 @@ a.skip-link   {
 .blog-home .product-grid .price-box .special-price label,.blog-home .product-grid .price-box .price ,.blog-home .product-grid .price-box .special-price .price{    font-size: 16px;font-weight: 300;color: #fff;}
 .blog-home  .product-grid .product-name a{font-size: 17px;font-weight: 400;color: #fff;}
 .blog-home .tabs-headers{text-align: center;}
-.blog-home .tabs-headers li{    display: inline-block;margin: 0;cursor: pointer;border: 1px solid #fff;padding: 5px 0;position: relative;top: 0;background: transparent;width: 130px;}
+.blog-home .tabs-headers li{    display: inline-block;margin: 0 5px;cursor: pointer;border: 1px solid #fff;padding: 5px 0;position: relative;top: 0;background: transparent;width: 130px;}
 .blog-home .tabs-headers li.active,.blog-home .tabs-headers li:hover{border-color:transparent;top: 0;background: #fff;}
 .blog-home .tabs-headers li img{margin: 0 auto;}
 .blog-home .tabs-headers li span{color: #fff;font-size: 18px;display: block;margin-top: 0;font-weight: 300;}
@@ -3389,7 +3374,7 @@ font-weight: 300;
 /* ============================================ * * Footer * ============================================ *//* -------------------------------------------- * * Footer */.footer,  .footer button   {
           font-family:   "Heebo",   sans-serif;
     }
-.footer-container  {float: right;width: 100%;margin-top: 50px;padding: 20px 0;}
+.footer-container  {float: right;width: 100%;margin-top: 50px;padding: 10px 0;}
 .catalog-product-view .footer-container{    margin-top: 0;}
 .footer-logo  img{margin: 0 auto;}
 .footer .foot-list{display:inline-block;vertical-align: top;margin-left: 65px;}
@@ -3578,22 +3563,22 @@ display: inline-block;
           padding:   30px 0;
     }
 .newsletter-container{}
-.newsletter-block{padding-top: 10%;color: #fff;padding-right: 40px;}
-.newsletter-block .title{font-size: 60px;font-family: 'fb_liddarbold';line-height: 60px;}
-.newsletter-block .subtitle{font-size: 18px;margin-bottom: 15px;}
-.footer-right{border: 1px solid transparent;float: right;width: 100%;}
-.footer-right .footer-contact,.footer-right .footer-links{float: right;width: 50%;padding: 30px 50px 0;    position: relative;}
-.footer-right .footer-links:before{content: "";display: block;background: #fff;width: 1px;    height: 79%;position: absolute;right: -14px;top: 13%;}
-.footer-right li,.footer-right li a{font-size: 17px;}
-.footer-right li{font-weight: bold;}
+.newsletter-block{padding-top: 0;color: #fff;padding-right: 0;}
+.newsletter-block .title{font-size: 40px;line-height: 40px;font-weight: 400;}
+.newsletter-block .subtitle{font-size: 18px;margin-bottom: 15px;    font-weight: 300;}
+.footer-right{float: right;width: 100%;}
+.footer-right .footer-links{float: right;width: 100%;padding: 0;    position: relative;}
+.footer-right li,.footer-right li a{font-size: 18px;}
+.footer-right li{font-weight: bold;margin-bottom: 2px;}
 .footer-right li a{font-weight: normal;}
-.footer-right ul{margin-bottom: 15px;}
-.footer-right .footer-contact{padding-top: 45px;}
-.footer-right .footer-contact li.tel{background: url(../images/footer-phone.png) right 16px no-repeat;}
-.footer-right .footer-contact li.mail{background: url(../images/footer-env.png) right 16px no-repeat;}
-.footer-right .footer-contact li.addr{background: url(../images/footer-point.png) right 16px no-repeat;}
-.footer-right .footer-contact li.face{background: url(../images/footer-face.png) right 16px no-repeat;}
-.footer-right .footer-contact li{ padding-right: 35px;padding-top: 20px;}
+.footer-right ul{    display: inline-block;vertical-align: top;margin-left: 80px;}
+.footer-contact{padding-top: 5px;}
+.footer-contact li.tel{background: url(../images/footer-phone.png) right 16px no-repeat;}
+.footer-contact li.mail{background: url(../images/footer-env.png) right 16px no-repeat;}
+.footer-contact li.addr{background: url(../images/footer-point.png) right 16px no-repeat;}
+.footer-contact li.face{background: url(../images/footer-face.png) right 16px no-repeat;}
+.footer-contact li{ padding-right: 30px;    margin-left: 10px;padding-top: 20px;display: inline-block;color: #fff;font-size: 17px;font-weight: 300;}
+.footer-contact li a{color: #fff;}
 @media only screen and (max-width:   1199px)   {
           .footer .links   {
             width:   22.65625%;
